hero na greb greb

--- a/greb-greb.html
+++ b/greb-greb.html
@@ -82,12 +82,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <div class="es-logo">
+                        <div class="gg-logo">
                             <img src="images/e-srecke/greb-greb_logo.svg" alt="E-srećke logo">
                         </div>
                         <div class="gg-text">
                             <h1>Ogrebi i <br>blago tebi!</h1>
-                            <span>Instant zabava te čeka na prodajnim mestima Državne lutrije Srbije i partnera.</span>
+                            <p>Instant zabava te čeka na prodajnim mestima <span class="d-inline d-sm-block">Državne lutrije Srbije i partnera.</span></p>
+                            <a href="#">Uplatna mesta <i class="fas fa-chevron-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -137,42 +138,6 @@
         
         <div class="srecke-item">
             <div class="srecke-item__img">
-                <img src="images/e-srecke/greb-greb-game.png" alt="">
-            </div>
-            <div class="srecke-item__text-big">
-                Greb Greb
-            </div>
-            <div class="srecke-item__price">
-                premija:<br>4 x 4.550.000 din.
-            </div>
-            <div class="srecke-item__max">
-                cena: 150 din.
-            </div>
-            <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
-            </div>
-        </div>
-
-        <div class="srecke-item">
-            <div class="srecke-item__img">
-                <img src="images/e-srecke/par-nepar.png" alt="">
-            </div>
-            <div class="srecke-item__text-big">
-                Par Nepar
-            </div>
-            <div class="srecke-item__price">
-                premija:<br>4 x 4.500.000 din.
-            </div>
-            <div class="srecke-item__max">
-                cena: 150 din.
-            </div>
-            <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
-            </div>
-        </div>
-
-        <div class="srecke-item">
-            <div class="srecke-item__img">
                 <img src="images/e-srecke/domine.png" alt="">
             </div>
             <div class="srecke-item__text-big">
@@ -201,6 +166,24 @@
             </div>
             <div class="srecke-item__max">
                 cena: 100 din.
+            </div>
+            <div class="srecke-item__rules">
+                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+            </div>
+        </div>
+
+        <div class="srecke-item">
+            <div class="srecke-item__img">
+                <img src="images/e-srecke/instant-loto.png" alt="">
+            </div>
+            <div class="srecke-item__text-big">
+                Instant loto
+            </div>
+            <div class="srecke-item__price">
+                premija:<br>3 x 2.500.000 din.
+            </div>
+            <div class="srecke-item__max">
+                cena: 80 din.
             </div>
             <div class="srecke-item__rules">
                 <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
@@ -281,24 +264,6 @@
 
         <div class="srecke-item">
             <div class="srecke-item__img">
-                <img src="images/e-srecke/instant-loto.png" alt="">
-            </div>
-            <div class="srecke-item__text-big">
-                Instant loto
-            </div>
-            <div class="srecke-item__price">
-                premija:<br>3 x 2.500.000 din.
-            </div>
-            <div class="srecke-item__max">
-                cena: 80 din.
-            </div>
-            <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
-            </div>
-        </div>
-        
-        <div class="srecke-item">
-            <div class="srecke-item__img">
                 <img src="images/e-srecke/pun-pogodak.png" alt="">
             </div>
             <div class="srecke-item__text-big">
@@ -309,6 +274,42 @@
             </div>
             <div class="srecke-item__max">
                 cena: 100 din.
+            </div>
+            <div class="srecke-item__rules">
+                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+            </div>
+        </div>
+
+        <div class="srecke-item">
+            <div class="srecke-item__img">
+                <img src="images/e-srecke/greb-greb-game.png" alt="">
+            </div>
+            <div class="srecke-item__text-big">
+                Greb Greb
+            </div>
+            <div class="srecke-item__price">
+                premija:<br>4 x 4.550.000 din.
+            </div>
+            <div class="srecke-item__max">
+                cena: 150 din.
+            </div>
+            <div class="srecke-item__rules">
+                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+            </div>
+        </div>
+
+        <div class="srecke-item">
+            <div class="srecke-item__img">
+                <img src="images/e-srecke/par-nepar.png" alt="">
+            </div>
+            <div class="srecke-item__text-big">
+                Par Nepar
+            </div>
+            <div class="srecke-item__price">
+                premija:<br>4 x 4.500.000 din.
+            </div>
+            <div class="srecke-item__max">
+                cena: 150 din.
             </div>
             <div class="srecke-item__rules">
                 <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
