--- a/greb-greb.html
+++ b/greb-greb.html
@@ -327,29 +327,40 @@
     </div>
     <!-- SRECKE NEXT/PREV -->
 
-    <!-- LOTO BANNER -->
-    <section class="loto-banner">
+    <!-- PRIZE WINNERS -->
+    <section class="prize-winners">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-8">
-                    <div class="loto-banner__logo">
-                        <img src="images/e-srecke/loto-logo_white.svg" alt="">
-                    </div>
-                    <div class="loto-banner__text text-white">
-                        <h2>Osvoji glavnu premiju od 1.500.000€!</h2>
-                        <p>Jer sedmica menja život i ove sedmice!</p>
-                        <button class="btn-dark">Igraj online</button>
-                    </div>
+            <div class="row text-center">
+                <div class="col-12">
+                    <img class="prize-winners__srecko" src="images/e-srecke/greb-srecko.png" alt="">
+                    <h1>Oni su osvojili glavnu premiju<span>!</span></h1>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <img class="prize-winners__winner" src="images/e-srecke/greb-premija1.png" alt="">
+                    <span class="name">Bratislav Janković (26) <br>Subotica</span>
+                    <span class="prize">Kolo sreće <br>4.500.000 din.</span>
                 </div>
                 <div class="col-md-4">
-                    <div class="loto-banner__image">
-                        <img src="images/loto-srecko.png" alt="">
-                    </div>
+                    <img class="prize-winners__winner" src="images/e-srecke/greb-premija2.png" alt="">
+                    <span class="name">Maja Vemić (31) <br>Kraljevo</span>
+                    <span class="prize">Ćup sa blagom <br>3.000.000 din.</span>
+                </div>
+                <div class="col-md-4">
+                    <img class="prize-winners__winner" src="images/e-srecke/greb-premija3.png" alt="">
+                    <span class="name">Srđan Galijaš (29) <br>Bački Petrovac</span>
+                    <span class="prize">20x Veća sreća <br>3.000.000 din.</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <button class="btn-dark">Svi dobitnici</button>
                 </div>
             </div>
         </div>
     </section>
-    <!-- LOTO BANNER -->
+    <!-- PRIZE WINNERS -->
 
     <!-- CHARITY -->
     <div class="charity charity--greb">
