--- a/index.html
+++ b/index.html
@@ -872,7 +872,7 @@
             <div class="row align-items-end">
                 <div class="col-md-12 col-lg-6 offset-lg-1">
                     <div class="greb__text">
-                        <img src="images/greb-logo.svg" alt="" width="140">
+                        <img src="images/greb-logo.svg" alt="" width="140" class="mb-3">
                         <p class="h1"><strong>Ako želiš brzu zabavu i laki keš!</strong></p>
                         <a href="#" class="btn btn-secondary mt-3 btn-lgg"><strong>SAZNAJ VIŠE</strong></a>
                     </div>
