radio na loto stranici; dodavao css i u style-1

--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
                                     class="" /><span>Proveri svoje rezultate<span
                                             class="color-yellow">.</span></span></p>
                         </div>
-                        <div class="col-sm-12 col-md-4 list-group home-results__btns" id="list-tab"
-                            role="tablist">
+                        <div class="col-sm-12 col-md-4 list-group" id="list-tab" role="tablist">
                             <button class="home-results__btns btn btn-darkk btn--padd-xs btn--cern active" id="loto-tab" data-toggle="list"
                                 href="#loto" role="tab" aria-controls="home"><strong>LOTO</strong></button>
                             <button class="home-results__btns btn btn-darkk btn--padd-xs btn--cern" id="bingo-tab"
@@ -796,7 +795,7 @@
                         <img src="images/dobitnik.jpg">
                     </div>
                 </div>
-                <div class="col-md-12 col-lg-6 offset-lg-1">
+                <div class="col-md-12 col-lg-6">
                     <div class="winners-text">
                         <p class="winners-text__quote">“Kupujem kuću na Zlatiboru!”</p>
                         <p class="lg winners-text__name"><strong>Milan Nikolic (43), Valjevo</strong>
@@ -822,7 +821,7 @@
                         <p class="winners-text__price">3.000.000 dinara.</p>
                     </div>
                 </div>
-                <div class="col-md-12 col-lg-3 offset-lg-1">
+                <div class="col-md-12 col-lg-3">
                     <div class="winners-media">
                         <img src="images/dobitnica.jpg">
                     </div>
