--- a/loto.html
+++ b/loto.html
@@ -119,7 +119,7 @@
                             <div class="ticket-card__row active row mt-3">
                                 <div class="col-sm-12">
                                     <p><strong>Tiket 1</strong></p>
-                                    <form class="ticket-fields">
+                                    <form class="ticket-fields" data-toggle="modal" data-target="#Loto">
                                         <button class="btn btn-dark mr-3"><strong>QP</strong></button>
                                         <span>
                                             <input class="ticket-fields__field" type="text" value="36"></input>
@@ -193,7 +193,7 @@
                             </div>
                             <div class="ticket-card__row active row mt-3">
                                 <div class="col-sm-12">
-                                    <form class="ticket-fields">
+                                    <form class="ticket-fields" data-toggle="modal" data-target="#Loto">
                                         <button class="btn btn-dark mr-3"><strong>QP</strong></button>
                                         <span>
                                             <input class="ticket-fields__field" type="text" value="36" disabled></input>
@@ -264,7 +264,7 @@
                             </div>
                             <div class="row mt-3">
                                 <div class="col-sm-12">
-                                    <form class="ticket-fields">
+                                    <form class="ticket-fields" data-toggle="modal" data-target="#Loto">
                                         <button class="btn btn-dark mr-3"><strong>QP</strong></button>
                                         <span>
                                             <input class="ticket-fields__field" type="text" value="" disabled></input>
@@ -335,7 +335,7 @@
                             </div>
                             <div class="row mt-3">
                                 <div class="col-sm-12">
-                                    <form class="ticket-fields">
+                                    <form class="ticket-fields" data-toggle="modal" data-target="#Loto">
                                         <button class="btn btn-dark mr-3"><strong>QP</strong></button>
                                         <span>
                                             <input class="ticket-fields__field" type="text" value="" disabled></input>
@@ -414,7 +414,7 @@
                         <div class="col-12">
                             <div class="row">
                                 <div class="col-lg-4">
-                                    <div class="float_left-bingo mb-2">
+                                    <div class="mb-2 d-flex">
                                         <div class="Form_Txt_Left01">
                                             <span class="lotoPlus">LOTO+</span>
                                         </div>
@@ -428,7 +428,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-8">
-                                    <div class="float_left-bingo">
+                                    <div class="form-choose">
                                         <div class="Form_Txt_Left01">
                                             <span class="joker">JOKER</span>
                                         </div>
@@ -438,7 +438,7 @@
                                                 <label class="label" for="cb-2"></label>
                                             </div>
                                         </div>
-                                        <div class="Form_Txt_Left01a d-flex">
+                                        <div class="Form_Txt_Left01a d-flex form-choose__numbers">
                                             <div class="custom-control custom-checkbox mr-3">
                                                 <input type="checkbox" class="custom-control-input" id="customCheck1">
                                                 <label class="custom-control-label" for="customCheck1">1</label>
@@ -461,7 +461,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="float-right mt-3">
+                                    <div class="float-right-mob mt-3">
                                         <span>
                                             <input class="ticket-fields__field ticket-fields__field--sm" type="text"
                                                 value="45" disabled></input>
@@ -498,22 +498,22 @@
                     </div>
 
                     <div class="row mt-2">
-                        <div class="col-lg-6">
+                        <div class="col-xl-6">
                             <div class="row">
-                                <div class="col-lg-5">
+                                <div class="col-5">
                                     <p class="text-sm">Loto</p>
                                     <p class="text-sm">Loto +</p>
                                     <p class="text-sm">Joker</p>
                                 </div>
-                                <div class="col-lg-7">
+                                <div class="col-7">
                                     <p class="text-sm">80,00 din</p>
                                     <p class="text-sm">00,00 din</p>
                                     <p class="text-sm">100,00 din</p>
                                 </div>
-                                <div class="col-lg-5 mt-3">
+                                <div class="col-5 mt-3 mb-3">
                                     <p class="h3"><strong>Ukupno</strong></p>
                                 </div>
-                                <div class="col-lg-7 mt-3">
+                                <div class="col-7 mt-3">
                                     <p class="h3"><strong>100,00 din.</strong></p>
                                 </div>
                             </div>
@@ -525,8 +525,8 @@
                                 </div>
                                 <div class="Form_Txt_Left01a">
                                     <div class="js-switch checkbox" data-style="rounded" data-label="yes-no">
-                                        <input type="checkbox" id="cb-2">
-                                        <label class="label" for="cb-2"></label>
+                                        <input type="checkbox" id="cb-9">
+                                        <label class="label" for="cb-9"></label>
                                     </div>
                                 </div>
                                 <div class="Form_Txt_Left01a d-flex">
@@ -544,7 +544,7 @@
                                     </div>
                                 </div>
                             </div>    
-                            <button class="Button_Big btn-dark mt-4" id="btn-bingo-play"
+                            <button class="Button_Big btn-dark mt-4 submit-btn" id="btn-bingo-play"
                                 data-target="#bingo-ticket-overview">Igraj</button>
                         </div>
                     </div>
@@ -845,6 +845,57 @@
         </div>
     </footer>
     <!-- FOOTER -->
+
+    <!-- Modal loto -->
+    <div class="modal fade" id="Loto" tabindex="-1" aria-labelledby="LotoLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="LotoLabel">TVOJI SREĆNI BROJEVI</h5>
+                    <p class="modal-numbers"><strong>7 / 11</strong></p>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form class="ticket-modal">
+                         <span>
+                             <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="45"
+                                 disabled></input>
+                         </span>
+                         <span>
+                             <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="4"
+                                 disabled></input>
+                         </span>
+                         <span>
+                             <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="12"
+                                 disabled></input>
+                         </span>
+                         <span>
+                             <input class="ticket-fields__field ticket-fields__field--sm" type="text" value=""
+                                 disabled></input>
+                         </span>
+                         <span>
+                             <input class="ticket-fields__field ticket-fields__field--sm" type="text" value=""
+                                 disabled></input>
+                         </span>
+                         <span>
+                             <input class="ticket-fields__field ticket-fields__field--sm" type="text" value=""
+                                 disabled></input>
+                         </span>
+                         <span>
+                             <input class="ticket-fields__field ticket-fields__field--sm" type="text" value=""
+                                 disabled></input>
+                         </span>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
