--- a/loto.html
+++ b/loto.html
@@ -427,7 +427,7 @@
                                             <input type="text" class="form-control form-control-tc fc-gray" value="8" disabled>
                                         </div>
                                         <div class="col-2 pl-0 pr-0 ticket-fields">
-                                            <span>
+                                            <span data-toggle="modal" data-target="#Loto2">
                                                 <input class="ticket-fields__field" type="text" value="" disabled="">
                                             </span>
                                         </div>
@@ -443,7 +443,7 @@
                                                 disabled>
                                         </div>
                                         <div class="col-2 pl-0 pr-0 ticket-fields">
-                                            <span>
+                                            <span data-toggle="modal" data-target="#Loto2">
                                                 <input class="ticket-fields__field" type="text" value="" disabled="">
                                             </span>
                                         </div>
@@ -457,7 +457,7 @@
                                                 disabled>
                                         </div>
                                         <div class="col-2 pl-0 pr-0 ticket-fields">
-                                            <span>
+                                            <span data-toggle="modal" data-target="#Loto2">
                                                 <input class="ticket-fields__field" type="text" value="" disabled="">
                                             </span>
                                         </div>
@@ -471,7 +471,7 @@
                                                 disabled>
                                         </div>
                                         <div class="col-2 pl-0 pr-0 ticket-fields">
-                                            <span>
+                                            <span data-toggle="modal" data-target="#Loto2">
                                                 <input class="ticket-fields__field" type="text" value="" disabled="">
                                             </span>
                                         </div>
@@ -485,7 +485,7 @@
                                                 disabled>
                                         </div>
                                         <div class="col-2 pl-0 pr-0 ticket-fields">
-                                            <span>
+                                            <span data-toggle="modal" data-target="#Loto2">
                                                 <input class="ticket-fields__field" type="text" value="" disabled="">
                                             </span>
                                         </div>
@@ -512,7 +512,7 @@
                                                 disabled>
                                         </div>
                                         <div class="col-2 pl-0 pr-0 ticket-fields">
-                                            <span>
+                                            <span data-toggle="modal" data-target="#Loto2">
                                                 <input class="ticket-fields__field" type="text" value="" disabled="">
                                             </span>
                                         </div>
@@ -527,7 +527,7 @@
                                                 value="5874" disabled>
                                         </div>
                                         <div class="col-2 pl-0 pr-0 ticket-fields">
-                                            <span>
+                                            <span data-toggle="modal" data-target="#Loto2">
                                                 <input class="ticket-fields__field" type="text" value="" disabled="">
                                             </span>
                                         </div>
@@ -541,7 +541,7 @@
                                                 disabled>
                                         </div>
                                         <div class="col-2 pl-0 pr-0 ticket-fields">
-                                            <span>
+                                            <span data-toggle="modal" data-target="#Loto2">
                                                 <input class="ticket-fields__field" type="text" value="" disabled="">
                                             </span>
                                         </div>
@@ -555,7 +555,7 @@
                                                 disabled>
                                         </div>
                                         <div class="col-2 pl-0 pr-0 ticket-fields">
-                                            <span>
+                                            <span data-toggle="modal" data-target="#Loto2">
                                                 <input class="ticket-fields__field" type="text" value="" disabled="">
                                             </span>
                                         </div>
@@ -569,7 +569,7 @@
                                                 disabled>
                                         </div>
                                         <div class="col-2 pl-0 pr-0 ticket-fields">
-                                            <span>
+                                            <span data-toggle="modal" data-target="#Loto2">
                                                 <input class="ticket-fields__field" type="text" value="" disabled="">
                                             </span>
                                         </div>
@@ -713,12 +713,14 @@
                                     </div>
                                 </div>
                             </div>    
-                            <button class="Button_Big btn-dark mt-4 submit-btn" id="btn-bingo-play"
+                            <button class="Button_Big btn btn-dark mt-4 submit-btn" id="btn-bingo-play"
                                 data-target="#bingo-ticket-overview">Igraj</button>
                         </div>
                     </div>
 
                 </div>
+                <p class="mt-5 text-sm">Morate biti prijavljeni da biste odigrali Loto tiket! <a
+                        href="#"><strong>Prijavi se.</strong></a></p>
             </div>
         </div>
     </div>
@@ -738,7 +740,7 @@
                             </div>
                             <div class="col-lg-6">
                                 <div class="draw-banner-text">
-                                    <p>BINGO izvlačenje ponedeljkom, od 19.55h</p>
+                                    <p><strong>LOTO izvlačenje utorak/petak, od 20h</strong></p>
                                 </div>
                             </div>
                             <div class="col-lg-3">
@@ -761,7 +763,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <img class="star" src="images/bingo/zvezdica-tackice-bingo.svg" alt="">
+                        <img class="star" src="images/zvezdica-tackice.svg" alt="">
                         <h1>Kako da igram Bingo<span>?</span></h1>
                         <img class="girl" src="images/bingo/girl-how-to-play.png" alt="">
                     </div>
@@ -872,7 +874,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12 d-flex justify-content-center">
-                        <button class="btn-dark regulations" id="" data-target="">Bingo pravila</button>
+                        <button class="btn btn-dark regulations" id="" data-target="">Bingo pravila</button>
                     </div>
                 </div>
             </div>
@@ -1187,6 +1189,187 @@
                     </form>
                 </div>
                 <div class="modal-footer justify-content-center">
+                    <button type="button" class="btn btn-secondary"><strong>IGRAJ</strong></button>
+                    <p class="underline cancel mr-4"><strong>Poništi sve</strong></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- Modal loto2 -->
+    <div class="modal fade" id="Loto2" tabindex="-1" aria-labelledby="Loto2Label" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="LotoLabel">TVOJI BROJEVI</h5>
+                    <p class="modal-numbers"><strong>7 / 11</strong></p>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form class="ticket-modal">
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="45"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="4"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="12"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="45"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="4"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="12"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="45"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="4"
+                                disabled></input>
+                        </span>
+                        <span class="active">
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="12"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="45"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="4"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="12"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="45"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="4"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="12"
+                                disabled></input>
+                        </span>
+                        <span class="active">
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="45"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="4"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="12"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="45"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="4"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="12"
+                                disabled></input>
+                        </span>
+                        <span class="active">
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="45"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="4"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="12"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="45"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="4"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="12"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="45"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="4"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="12"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="45"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="4"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="12"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="45"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="4"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="12"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="45"
+                                disabled></input>
+                        </span>
+                        <span>
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="4"
+                                disabled></input>
+                        </span>
+                        <span data-toggle="button" aria-pressed="false">
+                            <input class="ticket-fields__field ticket-fields__field--sm" type="text" value="12"
+                                disabled></input>
+                        </span>
+                    </form>
+                </div>
+                <div class="modal-footer justify-content-center">
+                    <p class="underline fav-numbers ml-4"><strong>Unesi omiljene brojeve</strong></p>
                     <button type="button" class="btn btn-secondary"><strong>IGRAJ</strong></button>
                     <p class="underline cancel mr-4"><strong>Poništi sve</strong></p>
                 </div>
