--- a/bingo.html
+++ b/bingo.html
@@ -384,9 +384,13 @@
                                                     <span class="bingo">Bingo</span> 
                                                 </div>
                                                 <div class="Form_Txt_Left01a" id="rb_bingo">
-                                                    <div class="js-switch checkbox" data-style="rounded" data-label="yes-no">
+                                                    <!-- <div class="js-switch checkbox" data-style="rounded" data-label="yes-no">
                                                         <input type="checkbox" id="cb-1">
                                                         <label class="label" for="cb-1"></label>
+                                                    </div> -->
+                                                    <div class="switchToggle">
+                                                        <input type="checkbox" id="switch">
+                                                        <label for="switch"></label>
                                                     </div>
                                                 </div>
                                                 <div id="bingo_price" class="Form_Txt_Right01" type="text">60,00 din.</div>
@@ -396,9 +400,13 @@
                                                     <span class="bingoPlus">Bingo+</span> 
                                                 </div>
                                                 <div class="Form_Txt_Left01a" id="rb_bingoPlus">
-                                                    <div class="js-switch checkbox" data-style="rounded" data-label="yes-no">
+                                                    <!-- <div class="js-switch checkbox" data-style="rounded" data-label="yes-no">
                                                         <input type="checkbox" id="cb-2">
                                                         <label class="label" for="cb-2"></label>
+                                                    </div> -->
+                                                    <div class="switchToggle">
+                                                        <input type="checkbox" id="switch1">
+                                                        <label for="switch1"></label>
                                                     </div>
                                                 </div>
                                                 <div id="bingo_plus_price" type="text" class="Form_Txt_Right01">40,00 din.</div>
@@ -413,7 +421,7 @@
                                             </div>
                                         </div>
                                         <div class="col-lg-6 d-flex d-lg-block justify-content-center mt-4 mt-lg-0">
-                                            <button class="Button_Big btn-dark" id="btn-bingo-play" data-target="#bingo-ticket-overview">Igraj</button>
+                                            <button class="btn Button_Big btn-dark" id="btn-bingo-play" data-target="#bingo-ticket-overview">Igraj</button>
                                         </div>
                                     </div>
                                 </div>
