--- a/e-srecke.html
+++ b/e-srecke.html
@@ -222,17 +222,15 @@
     <section class="loto-banner">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-8">
+                <div class="col-12">
                     <div class="loto-banner__logo">
                         <img src="images/e-srecke/loto-logo_white.svg" alt="">
                     </div>
-                    <div class="loto-banner__text text-white">
-                        <h2>Osvoji glavnu premiju od 1.500.000€!</h2>
-                        <p>Jer sedmica menja život i ove sedmice!</p>
+                    <div class="loto-banner__text text-white text-center">
+                        <p>Ove nedelje osvoji</p>
+                        <h2>1.500.000<sup>€</sup></h2>
                         <button class="btn-dark">Igraj online</button>
                     </div>
-                </div>
-                <div class="col-md-4">
                     <div class="loto-banner__image">
                         <img src="images/loto-srecko.png" alt="">
                     </div>
