radio na loto strani

--- a/loto.html
+++ b/loto.html
@@ -500,7 +500,7 @@
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
-                                    <p class="h5 mb-4"><strong>SISTEM OD</strong></p>
+                                    <p class="h5 mb-4 mt-xxs-2"><strong>SISTEM OD</strong></p>
                                     <div class="row">
                                         <div class="col-5 pr-1">
                                             <p class="text-center text-sm">Brojeva</p>
@@ -752,7 +752,7 @@
                                 </div>
                             </div>
                             <div class="col-lg-3">
-                                <div class="draw-banner-tv">
+                                <div class="draw-banner-tv draw-banner-tv--loto">
                                     <img src="images/TV-Prva.svg" alt="">
                                     <img class="d-none d-lg-block" src="images/plave-tackice3.svg" alt="">
                                 </div>
