draw-banner-container

--- a/bingo.html
+++ b/bingo.html
@@ -384,10 +384,6 @@
                                                     <span class="bingo">Bingo</span> 
                                                 </div>
                                                 <div class="Form_Txt_Left01a" id="rb_bingo">
-                                                    <!-- <div class="js-switch checkbox" data-style="rounded" data-label="yes-no">
-                                                        <input type="checkbox" id="cb-1">
-                                                        <label class="label" for="cb-1"></label>
-                                                    </div> -->
                                                     <div class="switchToggle">
                                                         <input type="checkbox" id="switch">
                                                         <label for="switch"></label>
@@ -400,10 +396,6 @@
                                                     <span class="bingoPlus">Bingo+</span> 
                                                 </div>
                                                 <div class="Form_Txt_Left01a" id="rb_bingoPlus">
-                                                    <!-- <div class="js-switch checkbox" data-style="rounded" data-label="yes-no">
-                                                        <input type="checkbox" id="cb-2">
-                                                        <label class="label" for="cb-2"></label>
-                                                    </div> -->
                                                     <div class="switchToggle">
                                                         <input type="checkbox" id="switch1">
                                                         <label for="switch1"></label>
@@ -440,7 +432,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="db-purple-bg">
+                    <div class="draw-banner__container draw-banner__container--purple">
                         <div class="row align-items-center">
                             <div class="col-lg-3">
                                 <div class="draw-banner-srecko">
