dodavao novi checkbox; sitne ispravke

--- a/rezultati.html
+++ b/rezultati.html
@@ -596,9 +596,10 @@
                                             <span class="lotoPlus">LOTO+</span>
                                         </div>
                                         <div class="Form_Txt_Left01a">
-                                            <div class="switchToggle">
-                                                <input type="checkbox" id="switch1">
-                                                <label for="switch1"></label>
+                                            <div class="js-switch checkbox" data-style="rounded"
+                                                data-label="yes-no">
+                                                <input type="checkbox" id="cb-1">
+                                                <label class="label" for="cb-1"></label>
                                             </div>
                                         </div>
                                     </div>
@@ -608,10 +609,10 @@
                                         <div class="Form_Txt_Left01">
                                             <span class="joker">JOKER</span>
                                         </div>
-                                        <div class="Form_Txt_Left01a mr-3">
-                                            <div class="switchToggle">
-                                                <input type="checkbox" id="switch2">
-                                                <label for="switch2"></label>
+                                        <div class="Form_Txt_Left01a">
+                                            <div class="js-switch checkbox" data-style="rounded" data-label="yes-no">
+                                                <input type="checkbox" id="cb-2">
+                                                <label class="label" for="cb-2"></label>
                                             </div>
                                         </div>
                                         <div class="Form_Txt_Left01a d-flex form-choose__numbers">
@@ -701,8 +702,8 @@
                                 </div>
                                 <div class="Form_Txt_Left01a mr-3">
                                     <div class="switchToggle">
-                                        <input type="checkbox" id="switch3">
-                                        <label for="switch3"></label>
+                                        <input type="checkbox" id="switch">
+                                        <label for="switch"></label>
                                     </div>
                                 </div>
                                 <div class="Form_Txt_Left01a d-flex">
