--- a/loto.html
+++ b/loto.html
@@ -738,7 +738,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="db-purple-bg">
+                    <div class="draw-banner__container draw-banner__container--red">
                         <div class="row align-items-center">
                             <div class="col-lg-3">
                                 <div class="draw-banner-srecko">
