zavrsene izmene na bingo strani

--- a/bingo.html
+++ b/bingo.html
@@ -465,13 +465,13 @@
                 <div class="row">
                     <div class="col-12">
                         <img class="star" src="images/bingo/zvezdica-tackice-bingo.svg" alt="">
-                        <h1>Kako da igram Bingo<span>?</span></h1>
+                        <h1>Kako da igram Bingo<span class="color-purple">?</span></h1>
                         <img class="girl" src="images/bingo/girl-how-to-play.png" alt="">
                     </div>
                 </div>
             </div>
         </div>
-        <div class="how-to-play__grid">
+        <div class="how-to-play__grid how-to-play__grid--bingo">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-lg-4">
@@ -575,7 +575,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12 d-flex justify-content-center">
-                        <button class="btn-dark regulations" id="" data-target="">Bingo pravila</button>
+                        <button class="btn btn-dark regulations" id="" data-target="">Bingo pravila</button>
                     </div>
                 </div>
             </div>
