radio na rezultatima; picnuo ticket fields-loptice

--- a/loto.html
+++ b/loto.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-1.css">
 
-    <title>Državna lutrija Srbije</title>
+    <title>Loto</title>
 </head>
 <body>
 
@@ -266,9 +266,9 @@
                                     </form>
                                 </div>
                             </div>
-                            <div class="row mt-3">
+                            <div class="ticket-card__row row mt-3">
                                 <div class="col-sm-12">
-                                    <form class="ticket-fields">
+                                    <form class="ticket-fields ticket-fields--hover-plus">
                                         <button class="btn btn-dark mr-3"><strong>QP</strong></button>
                                         <div data-toggle="modal" data-target="#Loto">
                                             <span>
@@ -339,9 +339,9 @@
                                     </form>
                                 </div>
                             </div>
-                            <div class="row mt-3">
+                            <div class="ticket-card__row row mt-3">
                                 <div class="col-sm-12">
-                                    <form class="ticket-fields">
+                                    <form class="ticket-fields ticket-fields--hover-plus">
                                         <button class="btn btn-dark mr-3"><strong>QP</strong></button>
                                         <div data-toggle="modal" data-target="#Loto">
                                             <span>
@@ -742,7 +742,7 @@
                         <div class="row align-items-center">
                             <div class="col-lg-3">
                                 <div class="draw-banner-srecko">
-                                    <img src="images/loto-srecko.png" alt="">
+                                    <img src="images/loto-srecko-r.png" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-6">
