--- a/rezultati.html
+++ b/rezultati.html
@@ -217,7 +217,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6">
-                            <div class="row bg-color-lgray pt-3 pb-3 align-items-center rounded-lg">
+                            <div class="row bg-color-lgray pt-3 pb-3 align-items-center rounded-lg mr-from-md-0">
                                 <div class="col-sm-8">
                                     <p class="text-sm">Očekivani LOTO dobitak u sledećem kolu:</p>
                                     <p class="h3"><strong>2.450.000 €</strong></p>
@@ -327,7 +327,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6">
-                            <div class="row bg-color-lgray pt-3 pb-3 align-items-center rounded-lg">
+                            <div class="row bg-color-lgray pt-3 pb-3 align-items-center rounded-lg mr-from-md-0">
                                 <div class="col-sm-8">
                                     <p class="text-sm">Očekivani LOTO+ dobitak u sledećem kolu:</p>
                                     <p class="h3"><strong>460.000 €</strong></p>
@@ -443,7 +443,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6">
-                            <div class="row bg-color-lgray pt-3 pb-3 align-items-center rounded-lg">
+                            <div class="row bg-color-lgray pt-3 pb-3 align-items-center rounded-lg mr-from-md-0">
                                 <div class="col-sm-8">
                                     <p class="text-sm">Očekivani JOKER dobitak u sledećem kolu:</p>
                                     <p class="h3"><strong>90.000 €</strong></p>
@@ -461,16 +461,90 @@
                 </div>
             </div>
 
-            <div class="row bg-color-lgray pt-3 pb-3 align-items-center rounded-lg">
-                <div class="col-sm-8">
-                    <p class="text-sm">Očekivani JOKER dobitak u sledećem kolu:</p>
-                    <p class="h3"><strong>90.000 €</strong></p>
-                </div>
-                <div class="col-sm-4 text-right-mob text-right">
-                    <button class="btn btn-dark"><strong>IGRAJ</strong></button>
+            <div class="row bg-color-dgray mt-5 pt-4 pb-4 justify-content-center rounded-lg mr-from-md-0 ml-from-md-0">
+                <div class="col-11">
+                    <div class="row color-white pt-1 pb-1">
+                        <div class="col-sm-3">
+                            <div class="row align-items-end">
+                                <div class="col-9 d-flex">
+                                    <?xml version="1.0" encoding="utf-8"?>
+                                    <!-- Generator: Adobe Illustrator 25.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                        viewBox="0 0 39.8 35.5" enable-background="new 0 0 39.8 35.5"
+                                        xml:space="preserve" height="40">
+                                        <path fill="#C4C8CD" d="M25.4,9.9L22,9.4l-1.5-3.1c-0.3-0.5-1.1-0.6-1.3,0l-1.5,3.1l-3.4,0.5c-0.6,0.1-0.9,0.8-0.4,1.3l2.5,2.4
+	l-0.6,3.4c-0.1,0.6,0.5,1.1,1.1,0.8l3-1.6l3,1.6c0.5,0.3,1.2-0.2,1.1-0.8l-0.6-3.4l2.5-2.4C26.3,10.7,26,10,25.4,9.9L25.4,9.9z
+	 M21.3,12.9l0.4,2.1l-1.8-1l-1.9,1l0.4-2.1l-1.5-1.5l2.1-0.3l0.9-1.9l0.9,1.9l2.1,0.3L21.3,12.9L21.3,12.9z M30.6,4.8V1.3
+	c0-0.4-0.4-0.8-0.8-0.8h-20C9.4,0.5,9,0.9,9,1.3v3.5H1.2c-0.4,0-0.8,0.4-0.8,0.8v4.2c0,4.2,4.6,9.1,10.8,10c2,4.1,5,6.1,7.5,6.5v6.6
+	H13c-1,0-1.8,0.8-1.8,1.8c0,0.2,0.2,0.4,0.4,0.4h16.5c0.2,0,0.4-0.2,0.4-0.4c0-1-0.8-1.8-1.8-1.8h-5.8v-6.6c2.5-0.4,5.5-2.4,7.5-6.5
+	c6.3-0.9,10.8-5.8,10.8-10V5.6c0-0.4-0.4-0.8-0.8-0.8H30.6z M2.6,9.8V7H9v1.6c0,3.5,0.5,6.4,1.2,8.8C5.7,16.2,2.6,12.5,2.6,9.8z
+	 M19.8,24.2c-4.9,0-8.6-7-8.6-15.7V2.6h17.3v5.9C28.5,17.2,24.7,24.2,19.8,24.2z M37.1,9.8c0,2.7-3.1,6.4-7.7,7.6
+	c0.8-2.4,1.2-5.3,1.2-8.8V7h6.5V9.8z" />
+                                    </svg>
+                                    <p class="h6 pl-3 mb-0"><strong>Glavna<br>premija</strong></p>
+                                </div>
+                                <div class="col-3 pl-0">
+                                    <p class="h2 mb-0 color-yellow"><strong>1</strong></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="row align-items-end">
+                                <div class="col-9 d-flex">
+                                    <?xml version="1.0" encoding="utf-8"?>
+                                    <!-- Generator: Adobe Illustrator 25.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                        viewBox="0 0 50.5 35.5" enable-background="new 0 0 50.5 35.5"
+                                        xml:space="preserve" height="40">
+                                        <path fill="#C4C8CD" d="M42.5,15.3c3.4,0,6.2-2.8,6.2-6.2S46,2.9,42.5,2.9s-6.2,2.8-6.2,6.2S39.1,15.3,42.5,15.3z M42.5,5.3
+	c2.1,0,3.7,1.7,3.7,3.7s-1.7,3.7-3.7,3.7s-3.7-1.7-3.7-3.7S40.5,5.3,42.5,5.3z M25.2,17.7c4.8,0,8.7-3.9,8.7-8.7S30,0.4,25.2,0.4
+	s-8.7,3.9-8.7,8.7S20.4,17.7,25.2,17.7z M25.2,2.9c3.4,0,6.2,2.8,6.2,6.2s-2.8,6.2-6.2,6.2S19,12.5,19,9.1S21.8,2.9,25.2,2.9z
+	 M44.1,17.7H41c-1.2,0-2.3,0.4-3.2,1c0.7,0.5,1.4,1.1,2,1.7c0.4-0.2,0.8-0.3,1.2-0.3h3.1c1.9,0,3.4,1.7,3.4,3.7
+	c0,0.7,0.6,1.2,1.2,1.2c0.7,0,1.2-0.6,1.2-1.2C50,20.5,47.3,17.7,44.1,17.7z M7.8,15.3c3.4,0,6.2-2.8,6.2-6.2s-2.8-6.2-6.2-6.2
+	S1.6,5.6,1.6,9.1S4.4,15.3,7.8,15.3z M7.8,5.3c2.1,0,3.7,1.7,3.7,3.7s-1.7,3.7-3.7,3.7s-3.7-1.7-3.7-3.7S5.8,5.3,7.8,5.3z
+	 M31.4,19.3c-2.6,0-3.2,0.9-6.2,0.9s-3.6-0.9-6.2-0.9c-2.8,0-5.6,1.3-7.2,3.6c-1,1.4-1.5,3.1-1.5,5v3.5c0,2.1,1.7,3.7,3.7,3.7h22.3
+	c2.1,0,3.7-1.7,3.7-3.7v-3.5c0-1.8-0.6-3.6-1.5-5C36.9,20.6,34.2,19.3,31.4,19.3L31.4,19.3z M37.6,31.4c0,0.7-0.6,1.2-1.2,1.2H14
+	c-0.7,0-1.2-0.6-1.2-1.2v-3.5c0-1.3,0.4-2.5,1.1-3.6c1.1-1.6,3-2.5,5.1-2.5c2.1,0,2.9,0.9,6.2,0.9s4.1-0.9,6.2-0.9s4,1,5.1,2.5
+	c0.7,1.1,1.1,2.3,1.1,3.6L37.6,31.4L37.6,31.4z M12.5,18.7c-0.9-0.6-2-1-3.2-1H6.3c-3.2,0-5.9,2.8-5.9,6.2c0,0.7,0.6,1.2,1.2,1.2
+	s1.2-0.6,1.2-1.2c0-2.1,1.5-3.7,3.4-3.7h3.1c0.4,0,0.8,0.1,1.2,0.3C11.2,19.8,11.8,19.2,12.5,18.7L12.5,18.7z" />
+                                    </svg>
+                                    <p class="h6 pl-3 mb-0"><strong>Svi<br>dobitnici</strong></p>
+                                </div>
+                                <div class="col-3 pl-0">
+                                    <p class="h2 mb-0 color-yellow"><strong>650</strong></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="row align-items-end justify-content-end">
+                                <div class="col-4 d-flex">
+                                    <?xml version="1.0" encoding="utf-8"?>
+                                    <!-- Generator: Adobe Illustrator 25.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                        viewBox="0 0 40.4 35.5" enable-background="new 0 0 40.4 35.5"
+                                        xml:space="preserve" height="40">
+                                        <path fill="#C4C8CD" d="M26.3,0.5c-3.7,0-7.1,0.7-9.6,1.8c-0.1,0-4,1.6-4,4.4V8C6.3,8.2,0.5,10.6,0.5,14.1v14.8
+	C0.5,32.2,6.5,35,14,35s13.5-2.8,13.5-6.2v-1.3c6.9-0.3,12.3-2.9,12.3-6.1V6.7C39.9,3.8,35.1,0.5,26.3,0.5z M25.1,28.8
+	c0,1.1-3.9,3.7-11.1,3.7S2.9,29.9,2.9,28.8V25c2.4,1.6,6.5,2.6,11.1,2.6s8.6-1,11.1-2.6V28.8z M25.1,21.4c0,1.1-3.9,3.7-11.1,3.7
+	S2.9,22.5,2.9,21.4v-3.9c2.4,1.6,6.5,2.6,11.1,2.6s8.6-1,11.1-2.6V21.4z M14,17.7c-6.2,0-11.3-1.7-11.3-3.7s5.1-3.7,11.3-3.7
+	s11.3,1.7,11.3,3.7S20.3,17.7,14,17.7z M37.4,21.4c0,1-3.5,3.4-9.8,3.6v-4.9c4.1-0.2,7.6-1.1,9.8-2.6V21.4z M37.4,14.1
+	c0,1-3.5,3.3-9.8,3.6v-3.6c0-0.4-0.1-0.8-0.3-1.3c4.2-0.1,7.9-1.1,10.2-2.6V14.1z M26.3,10.4c-0.6,0-1.1,0-1.6-0.1
+	c-2.8-1.7-6.5-2.2-8.9-2.3c-0.5-0.4-0.8-0.8-0.8-1.3c0-2,5.1-3.7,11.3-3.7s11.3,1.7,11.3,3.7S32.6,10.4,26.3,10.4z" />
+                                    </svg>
+                                    <p class="h6 pl-3 mb-0"><strong>Osvojili<br>ste</strong></p>
+                                </div>
+                                <div class="col-7 pl-0">
+                                    <p class="h2 mb-0 color-yellow"><strong>5.000.000 RSD</strong></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            
+
         </div>
     </div>
     <!-- SCORE TABS -->
